tests/baselines/reference/mergedModuleDeclarationCodeGen.errors.txt
tests/cases/compiler/mergedModuleDeclarationCodeGen.ts(1,15): error TS1148: Cannot compile modules unless the '--module' flag is provided. Consider setting the 'module' compiler option in a 'tsconfig.json' file.


==== tests/cases/compiler/mergedModuleDeclarationCodeGen.ts (1 errors) ====
    export module X {
                  ~
!!! error TS1148: Cannot compile modules unless the '--module' flag is provided. Consider setting the 'module' compiler option in a 'tsconfig.json' file.
        export module Y {
            class A {
                constructor(Y: any) {
                    new B();
                }
            }
        }
    }
    export module X {
        export module Y {
            export class B {
            }
        }
    }